added live link to readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,13 @@ nav a {
     color: whitesmoke;
 }
 
+div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 100px;
+}
+
 h1 {
     color: whitesmoke;
 }
